--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,10 @@
 body {
+    background-image: url('../images/black-dog-coffee-kansas-city-social.jpg');
+    background-size: cover;
     font-size: 24px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-weight: bold;
-    color: #000000;
+    color: #ffffff;
 }
 
 .jumbotron {
@@ -12,6 +14,8 @@ body {
     color: #ffffff;
 }
 
-.gamePlay {
+.game-play {
+    background-color: #fffffd;
+    color: #8b4513;
     text-align: center;
 }
