--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 
 html,
 body {
+    width: 100%;
     height: 100%;
 }
 
@@ -16,6 +17,8 @@ body {
     font-family: gabrwffr;
     font-size: 24px;
     text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .jumbotron {
@@ -23,6 +26,10 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-color: #ffffff;
+}
+
+main {
+    flex: 1 0 auto;
 }
 
 #image {
@@ -33,4 +40,9 @@ body {
 
 #gamePlay {
     padding: 10px;
+}
+
+#footerText {
+    color: #ffffff;
+    font-size: 16px;
 }
